# c-dns-proxy

./: .gitignore  CMakeLists.txt  Makefile  README.md
scripts/: build_xcode.sh
src/: dns_svr.c  phase1.c
src/shared/: answer.c  answer.h  dnsmsg.c  dnsmsg.h  dnstypes.h  header.c  header.h  headers.h  net.c  net.h  question.c  question.h  utils.c  utils.h
